--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Stark Web Development Services",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "console-stamp": "^0.2.9",
+    "dotenv": "^8.2.0"
+  }
 }
