--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "console-stamp": "^0.2.9",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "yenv": "^2.1.0"
   }
 }
